--- a/story.html
+++ b/story.html
@@ -1288,7 +1288,8 @@ Tony Stark 的全息投影離開座位，注視著他的女兒。
 「我愛你，爸爸。」止不住的顫抖，語氣中帶點鼻音。
 他將對方拉往自己身上靠，輕拍對方的肩，「我也愛你。」
 
-[[繼續-&gt;結局4]]</tw-passagedata><tw-passagedata pid="153" name="結局4" tags="END" position="970,11715" size="100,100">羅寒岳放聲大哭，這些年來壓抑著的情感如同潰堤般，隨著淚水傾瀉出來。
+[[繼續-&gt;結局4]]
+(set:$envelope to false)</tw-passagedata><tw-passagedata pid="153" name="結局4" tags="END" position="970,11715" size="100,100">羅寒岳放聲大哭，這些年來壓抑著的情感如同潰堤般，隨著淚水傾瀉出來。
 羅辰旭只是默默地抱著他。
 
 哭聲漸漸轉弱，羅寒岳的身影化作點點白光，溶進羅辰旭的懷中。
@@ -1301,7 +1302,7 @@ Tony Stark 的全息投影離開座位，注視著他的女兒。
 [[重新開始-&gt;開頭1]]
 [[結束遊戲-&gt;感謝遊玩]]
 
-&lt;iframe width=&quot;0&quot; height=&quot;0&quot; src=&quot;https://www.youtube.com/embed/M6gcoDN9jBc?controls=0&amp;autoplay=true&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;
+&lt;iframe width=&quot;0&quot; height=&quot;0&quot; src=&quot;https://www.youtube.com/embed/ijk6mJW4w4c?controls=0&amp;autoplay=true&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;
 ]</tw-passagedata><tw-passagedata pid="154" name="信封3" tags="BONUS" position="970,11867" size="100,100">(text-colour:#a5d8ff)[-現實世界羅寒岳房間-]
 幾天後，頂著羅寒岳的外表，羅辰旭整理著他的背包。
 「這是什麼？信？」在背包深處，他翻到了一封被蠟封起來的信。
@@ -1326,7 +1327,7 @@ Tony Stark 的全息投影離開座位，注視著他的女兒。
 [[重新開始-&gt;開頭1]]
 [[結束遊戲-&gt;感謝遊玩]]
 
-&lt;iframe width=&quot;0&quot; height=&quot;0&quot; src=&quot;https://www.youtube.com/embed/M6gcoDN9jBc?controls=0&amp;autoplay=true&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;</tw-passagedata><tw-passagedata pid="156" name="結局2" tags="END" position="671,13067" size="100,100">「幹嘛笑的像個白癡一樣，很噁心耶。」
+&lt;iframe width=&quot;0&quot; height=&quot;0&quot; src=&quot;https://www.youtube.com/embed/ijk6mJW4w4c?controls=0&amp;autoplay=true&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;</tw-passagedata><tw-passagedata pid="156" name="結局2" tags="END" position="671,13067" size="100,100">「幹嘛笑的像個白癡一樣，很噁心耶。」
 「嘿嘿嘿，謝謝你們。」不理會焱的嫌惡，羅寒岳露出了更傻氣的笑容。
 「耖！你腦袋撞到喔？」焱別過臉。
 「焱，在公眾場合請注意措辭。坦然一點吧。」永儒搧了扇子，對羅寒岳笑了一下，「不必客氣，我只是做了對我最好的決定。」
