--- a/story.html
+++ b/story.html
@@ -1288,8 +1288,7 @@ Tony Stark 的全息投影離開座位，注視著他的女兒。
 「我愛你，爸爸。」止不住的顫抖，語氣中帶點鼻音。
 他將對方拉往自己身上靠，輕拍對方的肩，「我也愛你。」
 
-[[繼續-&gt;結局4]]
-(set:$envelope to false)</tw-passagedata><tw-passagedata pid="153" name="結局4" tags="END" position="970,11715" size="100,100">羅寒岳放聲大哭，這些年來壓抑著的情感如同潰堤般，隨著淚水傾瀉出來。
+[[繼續-&gt;結局4]]</tw-passagedata><tw-passagedata pid="153" name="結局4" tags="END" position="970,11715" size="100,100">羅寒岳放聲大哭，這些年來壓抑著的情感如同潰堤般，隨著淚水傾瀉出來。
 羅辰旭只是默默地抱著他。
 
 哭聲漸漸轉弱，羅寒岳的身影化作點點白光，溶進羅辰旭的懷中。
