--- a/story.html
+++ b/story.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play story.</tw-noscript></noscript></tw-story>
-<tw-storydata name="story" startnode="1" creator="Twine" creator-version="2.3.16" ifid="24392B50-0A56-4EBC-BE4A-562FB0937C0E" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="END" color="green"></tw-tag>,<tw-tag name="上學" color="blue"></tw-tag>,<tw-tag name="Branch" color="red"></tw-tag>,<tw-tag name="THANKS" color="purple"></tw-tag>,<tw-tag name="BONUS" color="blue"></tw-tag>,<tw-tag name="autobranch" color="yellow"></tw-tag><tw-passagedata pid="1" name="開頭0" tags="開頭" position="601,50" size="100,100">(align:&quot;&lt;==&quot;)+(box:&quot;==XXXXXXXXXX==&quot;)[(text-colour:#ffec99)[(text-style:&quot;smear&quot;)[###[[SPLITS(點擊進入遊戲劇情)-&gt;開頭1]]]]]
+<tw-storydata name="story" startnode="1" creator="Twine" creator-version="2.3.16" ifid="24392B50-0A56-4EBC-BE4A-562FB0937C0E" zoom="0.6" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="END" color="green"></tw-tag>,<tw-tag name="上學" color="blue"></tw-tag>,<tw-tag name="Branch" color="red"></tw-tag>,<tw-tag name="THANKS" color="purple"></tw-tag>,<tw-tag name="BONUS" color="blue"></tw-tag>,<tw-tag name="autobranch" color="yellow"></tw-tag><tw-passagedata pid="1" name="開頭0" tags="開頭" position="601,50" size="100,100">(align:&quot;&lt;==&quot;)+(box:&quot;==XXXXXXXXXX==&quot;)[(text-colour:#ffec99)[(text-style:&quot;smear&quot;)[###[[SPLITS(點擊進入遊戲劇情)-&gt;開頭1]]]]]
 (align:&quot;&lt;==&quot;)+(box:&quot;====XXXX====&quot;)[作者:林宣瑩、林嘉紜]
 (align:&quot;&lt;==&quot;)+(box:&quot;==XXXXXXXXXXXXXXXXXXXX===&quot;)[&lt;img src=&quot;https://raw.githubusercontent.com/oSaltedFisho/WIBN_2_2/main/picture/20220601_no_noise.jpg&quot; width=&quot;600&quot;&gt;]</tw-passagedata><tw-passagedata pid="2" name="開頭2" tags="開頭" position="600,312" size="100,100">「我…我只是想看看自己出生前的紀錄和證明…」羅寒岳的頭越來越低。
 (text-colour:#868e96)[『我只是想證明自己是在期待下出生的，也想看你是否還留著，希望你是愛我的…』]
@@ -31,10 +31,12 @@
 再次醒來，羅寒岳看著已無生命跡象的父親，伸出手探鼻息，望著自己不知為何沾滿血的雙手，不敢相信父親已經死亡，「我還有好多事想和您一起做啊…而且
 
 (請協助完成這句話，這將會決定接下來出場的人格)
-[[我也還沒成為能讓您感到驕傲的人」-&gt;理性]]
-[[我還沒能把跟您的心結打開」-&gt;暴力]]
+[[我也還來不及成為您的驕傲」-&gt;理性]]
+[[我們的心結還沒打開」-&gt;暴力]]
 
-語畢，羅寒岳再次陷入昏迷。</tw-passagedata><tw-passagedata pid="5" name="理性" tags="" position="501,700" size="100,100">(set: $personality to &quot;永儒&quot;)
+語畢，羅寒岳再次陷入昏迷。
+
+</tw-passagedata><tw-passagedata pid="5" name="理性" tags="" position="501,700" size="100,100">(set: $personality to &quot;永儒&quot;)
 羅寒岳再次醒來，看著身旁的父親屍體，再望向滿是鮮血的雙手，自言自語道「怎麼會搞成這樣？」，皺著眉頭思考著接下來要如何處理屍體。
 
 「這個年紀被報案可以減輕刑事責任，或是揭露自己有這個病就能無罪…」
@@ -1595,7 +1597,7 @@ Tony Stark 的全息投影離開座位，注視著他的女兒。
 &quot;,&quot;了解&quot;)
 (text-colour:#a5d8ff)[-羅家-]
 
-(link-repeat:&#39;羅寒岳&#39;)[(open-url:&#39;http://139.162.74.22/mediawiki/index.php/%E7%BE%85%E5%AF%92%E5%B2%B3&#39;)]！要我說幾次，不准進來我的書房，你到底是像到誰，那麼沒有規矩」(link-repeat:&#39;羅辰旭&#39;)[(open-url:&#39;http://139.162.74.22/mediawiki/index.php/%E7%BE%85%E8%BE%B0%E6%97%AD&#39;)]走出書房，憤怒地向兒子吼道。
+「(link-repeat:&#39;羅寒岳&#39;)[(open-url:&#39;http://139.162.74.22/mediawiki/index.php/%E7%BE%85%E5%AF%92%E5%B2%B3&#39;)]！要我說幾次，不准進來我的書房，你到底是像到誰，那麼沒有規矩」(link-repeat:&#39;羅辰旭&#39;)[(open-url:&#39;http://139.162.74.22/mediawiki/index.php/%E7%BE%85%E8%BE%B0%E6%97%AD&#39;)]走出書房，憤怒地向兒子吼道。
 「對不起…我只是…只是想要找到(link-repeat:&#39;出生證明&#39;)[(open-url:&#39;http://139.162.74.22/mediawiki/index.php/%E5%87%BA%E7%94%9F%E8%AD%89%E6%98%8E&#39;)]而已」羅寒岳正坐在餐桌前吃飯，一聽到父親的怒吼聲，起身低頭小聲說道。
 「你找那個沒用的東西做什麼？看看你是何時又如何害死你媽的嗎？」對於自己的唯一兒子，羅辰旭沒有絲毫耐心。
 
