--- a/story.html
+++ b/story.html
@@ -9,9 +9,21 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play story.</tw-noscript></noscript></tw-story>
-<tw-storydata name="story" startnode="1" creator="Twine" creator-version="2.3.16" ifid="24392B50-0A56-4EBC-BE4A-562FB0937C0E" zoom="0.6" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="END" color="green"></tw-tag>,<tw-tag name="上學" color="blue"></tw-tag>,<tw-tag name="Branch" color="red"></tw-tag>,<tw-tag name="THANKS" color="purple"></tw-tag>,<tw-tag name="BONUS" color="blue"></tw-tag>,<tw-tag name="autobranch" color="yellow"></tw-tag><tw-passagedata pid="1" name="開頭0" tags="開頭" position="601,50" size="100,100">(align:&quot;&lt;==&quot;)+(box:&quot;==XXXXXXXXXX==&quot;)[(text-colour:#ffec99)[(text-style:&quot;smear&quot;)[###[[SPLITS(點擊進入遊戲劇情)-&gt;開頭1]]]]]
-(align:&quot;&lt;==&quot;)+(box:&quot;====XXXX====&quot;)[作者:林宣瑩、林嘉紜]
-(align:&quot;&lt;==&quot;)+(box:&quot;==XXXXXXXXXXXXXXXXXXXX===&quot;)[&lt;img src=&quot;https://raw.githubusercontent.com/oSaltedFisho/WIBN_2_2/main/picture/20220601_no_noise.jpg&quot; width=&quot;600&quot;&gt;]</tw-passagedata><tw-passagedata pid="2" name="開頭2" tags="開頭" position="600,312" size="100,100">「我…我只是想看看自己出生前的紀錄和證明…」羅寒岳的頭越來越低。
+<tw-storydata name="story" startnode="1" creator="Twine" creator-version="2.3.16" ifid="24392B50-0A56-4EBC-BE4A-562FB0937C0E" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="END" color="green"></tw-tag>,<tw-tag name="上學" color="blue"></tw-tag>,<tw-tag name="Branch" color="red"></tw-tag>,<tw-tag name="THANKS" color="purple"></tw-tag>,<tw-tag name="BONUS" color="blue"></tw-tag>,<tw-tag name="autobranch" color="yellow"></tw-tag><tw-passagedata pid="1" name="開頭0" tags="開頭" position="601,50" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;=======XXXXXXXX=======&quot;)[(text-colour:#ffec99)[(text-style:&quot;smear&quot;)[#SPLITS]]]
+=||=
+母親難產去世、父親遷怒，從小，(link-repeat:&#39;羅寒岳&#39;)[(open-url:&#39;http://139.162.74.22/mediawiki/index.php/%E7%BE%85%E5%AF%92%E5%B2%B3&#39;)]就不知道被愛的感覺。由於長期被當成父親的遷怒對象，造成了他壓抑、不太與人交心的性格。
+
+某天，為了找到他的出生證明，羅寒岳偷偷潛入父親的書房，不料被父親發現......
+
+(align:&quot;==&gt;&quot;)+(box:&quot;====XXXXXXXXXXXXXXXXXXXX=&quot;)[(text-style:&quot;smear&quot;)[[[(點擊進入劇情)-&gt;開頭1]]]
+
+
+(link-repeat:&#39;Mediawiki&#39;)[(open-url:&#39;http://139.162.74.22/mediawiki&#39;)]
+作者群:林宣瑩、林嘉紜
+多線互動敘事工作坊]
+=|=
+&lt;img src=&quot;https://raw.githubusercontent.com/oSaltedFisho/WIBN_2_2/main/picture/20220601_no_noise.jpg&quot; width=&quot;500&quot;&gt;
+|==|</tw-passagedata><tw-passagedata pid="2" name="開頭2" tags="開頭" position="600,312" size="100,100">「我…我只是想看看自己出生前的紀錄和證明…」羅寒岳的頭越來越低。
 (text-colour:#868e96)[『我只是想證明自己是在期待下出生的，也想看你是否還留著，希望你是愛我的…』]
 「我早就扔了，留著它做什麼，要是能重來，我一定不生下你，是你害死你媽…」一說出口，羅辰旭就意識到自己說了非常殘忍的話，但這卻是他心中所想。
 
@@ -269,7 +281,7 @@
 
 ---
 (text-colour:#ffe066)[###(text-style:&quot;smear&quot;)[結局1_毫無察覺的離開]]
-[[重新開始-&gt;開頭1]]
+[[重新開始-&gt;開頭0]]
 [[結束遊戲-&gt;感謝遊玩]]
 
 &lt;iframe width=&quot;0&quot; height=&quot;0&quot; src=&quot;https://www.youtube.com/embed/SzsPgxftm64?controls=0&amp;amp;start=37&amp;autoplay=true&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;</tw-passagedata><tw-passagedata pid="34" name="接受治療7" tags="" position="745,4141" size="100,100">「他來了他來了」，一聽就知道是岳岳的聲音。
@@ -436,7 +448,7 @@
 一連串的資訊持續對羅辰旭轟炸，他怎麼也沒想到，自己並非一個完整獨立的個體，他很無法接受也不願接受，但表面上，他沒有任何的情緒波動。
 同時，羅辰旭暗自下定了決心。
 
-[[繼續-&gt;發覺]]</tw-passagedata><tw-passagedata pid="52" name="感謝遊玩" tags="THANKS" position="1284,13174" size="100,100">
+[[繼續-&gt;發覺]]</tw-passagedata><tw-passagedata pid="52" name="感謝遊玩" tags="THANKS" position="1200,13069" size="100,100">
 #(text-colour:#ffec99)[(text-style:&quot;bold&quot;,&quot;buoy&quot;,&quot;smear&quot;)[感謝您的遊玩ヾ(*´∀ ˋ*)ﾉ]]
 ---
 作者:林宣瑩，林嘉紜
@@ -1261,7 +1273,7 @@
 
 ---
 (text-colour:#ffe066)[###(text-style:&quot;smear&quot;)[結局3_不被理解的那個人]]
-[[重新開始-&gt;開頭1]]
+[[重新開始-&gt;開頭0]]
 [[結束遊戲-&gt;感謝遊玩]]
 
 &lt;iframe width=&quot;0%&quot; height=&quot;0&quot; scrolling=&quot;no&quot; frameborder=&quot;no&quot; allow=&quot;autoplay&quot; src=&quot;https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1145481232&amp;color=%23ff5500&amp;auto_play=true&amp;visual=true&quot;&gt;&lt;/iframe&gt;</tw-passagedata><tw-passagedata pid="150" name="心願2" tags="" position="970,11265" size="100,100">這段期間，羅辰旭按照約定，盡心盡力扮演著一位父親。
@@ -1300,7 +1312,7 @@ Tony Stark 的全息投影離開座位，注視著他的女兒。
 (if:$envelope is true)[[[繼續-&gt;信封3]]](else-if:$envelope is false)[
 ---
 (text-colour:#ffe066)[###(text-style:&quot;smear&quot;)[結局4-1_心願達成]]
-[[重新開始-&gt;開頭1]]
+[[重新開始-&gt;開頭0]]
 [[結束遊戲-&gt;感謝遊玩]]
 
 &lt;iframe width=&quot;0&quot; height=&quot;0&quot; src=&quot;https://www.youtube.com/embed/ijk6mJW4w4c?controls=0&amp;autoplay=true&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;
@@ -1325,7 +1337,7 @@ Tony Stark 的全息投影離開座位，注視著他的女兒。
 
 ---
 (text-colour:#ffe066)[###(text-style:&quot;smear&quot;)[結局4-2_父親的信]]
-[[重新開始-&gt;開頭1]]
+[[重新開始-&gt;開頭0]]
 [[結束遊戲-&gt;感謝遊玩]]
 
 &lt;iframe width=&quot;0&quot; height=&quot;0&quot; src=&quot;https://www.youtube.com/embed/ijk6mJW4w4c?controls=0&amp;autoplay=true&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;</tw-passagedata><tw-passagedata pid="156" name="結局2" tags="END" position="671,13067" size="100,100">「幹嘛笑的像個白癡一樣，很噁心耶。」
@@ -1342,7 +1354,7 @@ Tony Stark 的全息投影離開座位，注視著他的女兒。
 
 ---
 (text-colour:#ffe066)[###(text-style:&quot;smear&quot;)[結局2_互相扶持的人格們]]
-[[重新開始-&gt;開頭1]]
+[[重新開始-&gt;開頭0]]
 [[結束遊戲-&gt;感謝遊玩]]
 
 &lt;iframe width=&quot;0%&quot; height=&quot;0&quot; scrolling=&quot;no&quot; frameborder=&quot;no&quot; allow=&quot;autoplay&quot; src=&quot;https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1255619689&amp;color=%23ff5500&amp;auto_play=true&amp;hide_related=false&amp;visual=true&quot;&gt;&lt;/iframe&gt;</tw-passagedata><tw-passagedata pid="157" name="成長2" tags="" position="1121,11265" size="100,100">(text-colour:(hsl:160,0.8462,0.8725,0.75))[「生日快樂！」張祐寧將禮物遞給他。
@@ -1424,7 +1436,7 @@ Tony Stark 的全息投影離開座位，注視著他的女兒。
 
 ---
 (text-colour:#ffe066)[###(text-style:&quot;smear&quot;)[結局5_又回到一個人]]
-[[重新開始-&gt;開頭1]]
+[[重新開始-&gt;開頭0]]
 [[結束遊戲-&gt;感謝遊玩]]
 
 &lt;iframe width=&quot;0&quot; height=&quot;0&quot; src=&quot;https://www.youtube.com/embed/AsOgbM2qnfU?start=8&amp;autoplay=true&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;</tw-passagedata><tw-passagedata pid="166" name="調查2" tags="" position="445,4817" size="100,100">「哈哈，抱歉啦。剛剛我在想事情沒注意到。」羅寒岳揉了揉岳岳的臉頰，「抱歉讓你擔心了。」
@@ -1588,7 +1600,7 @@ Tony Stark 的全息投影離開座位，注視著他的女兒。
 「還能動的話就快躲到我身後。」男子往前站到羅辰旭和羅寒岳之間，將重心放低，擺出迎戰的姿態，「我可沒多餘的心力同時保護你。」
 「啊！好的。」儘管內心冒出許多疑問，羅寒岳還是先照著對方的指示行動。
 
-[[繼續-&gt;成長5]]</tw-passagedata><tw-passagedata pid="189" name="開頭1" tags="開頭" position="599,183" size="100,100">(dialog:&quot;特殊文字格式解說:
+[[繼續-&gt;成長5]]</tw-passagedata><tw-passagedata pid="189" name="開頭1" tags="開頭" position="601,183" size="100,100">(dialog:&quot;特殊文字格式解說:
 //斜體代表書信內容；//
 (text-colour:#868e96)[『灰色雙引號代表角色的內心話；』]
 (text-colour:(hsl:160,0.8462,0.8725,0.75))[綠色代表回憶；]
@@ -1597,7 +1609,7 @@ Tony Stark 的全息投影離開座位，注視著他的女兒。
 &quot;,&quot;了解&quot;)
 (text-colour:#a5d8ff)[-羅家-]
 
-「(link-repeat:&#39;羅寒岳&#39;)[(open-url:&#39;http://139.162.74.22/mediawiki/index.php/%E7%BE%85%E5%AF%92%E5%B2%B3&#39;)]！要我說幾次，不准進來我的書房，你到底是像到誰，那麼沒有規矩」(link-repeat:&#39;羅辰旭&#39;)[(open-url:&#39;http://139.162.74.22/mediawiki/index.php/%E7%BE%85%E8%BE%B0%E6%97%AD&#39;)]走出書房，憤怒地向兒子吼道。
+「羅寒岳！要我說幾次，不准進來我的書房，你到底是像到誰，那麼沒有規矩」(link-repeat:&#39;羅辰旭&#39;)[(open-url:&#39;http://139.162.74.22/mediawiki/index.php/%E7%BE%85%E8%BE%B0%E6%97%AD&#39;)]走出書房，憤怒地向兒子吼道。
 「對不起…我只是…只是想要找到(link-repeat:&#39;出生證明&#39;)[(open-url:&#39;http://139.162.74.22/mediawiki/index.php/%E5%87%BA%E7%94%9F%E8%AD%89%E6%98%8E&#39;)]而已」羅寒岳正坐在餐桌前吃飯，一聽到父親的怒吼聲，起身低頭小聲說道。
 「你找那個沒用的東西做什麼？看看你是何時又如何害死你媽的嗎？」對於自己的唯一兒子，羅辰旭沒有絲毫耐心。
 
