--- a/story.html
+++ b/story.html
@@ -60,7 +60,7 @@
 
 
 [[繼續-&gt;收留(理性)1]]</tw-passagedata><tw-passagedata pid="6" name="暴力" tags="" position="700,701" size="100,100">(set: $personality to &quot;焱&quot;)
-羅寒岳再次醒來，看著身旁的父親屍體，有些吃驚地說道「擱來啊…哪會舞加按呢？！」，雖然有些困惑，但因為擔心放太久家裡會飄出屍體的惡臭味，且自己是在現場的唯一嫌疑人，必須快點處理掉屍體。
+羅寒岳再次醒來，看著身旁的父親屍體，有些吃驚地說道「擱來啊…那欸弄尬安捏？！」，雖然有些困惑，但因為擔心放太久家裡會飄出屍體的惡臭味，且自己是在現場的唯一嫌疑人，必須快點處理掉屍體。
 找到家裡的大麻布袋及黑色大垃圾袋，羅寒岳開始將屍體拖起身，並同時把黑色大垃圾袋先由頭部套入，完整裝入後再綑綁起來，並放入大麻布袋。
 接著，羅寒岳清理手上的血跡並換件衣服，拖著大麻布袋像是拖著大型垃圾一樣，一如往常地出門，並將麻布袋丟入社區的垃圾集中區一般垃圾。
 但他萬萬沒有想到的是，屍體在垃圾集中區飄出了極濃的腐爛味道，所以社區管理員決定將一個個垃圾打開看是誰沒有按照垃圾分類，因此事跡曝光，管理員報警，羅寒岳被帶往派出所詢問。
@@ -126,7 +126,9 @@
 「好」羅寒岳回應道，隨後下床自言自語著，(text-colour:#868e96)[『我為什麼不在家裡，而在姑姑家呢？』]他不解。
 
 [[繼續-&gt;甦醒(姑姑)2]]
-</tw-passagedata><tw-passagedata pid="15" name="上學1" tags="" position="601,1773" size="100,100">(text-colour:#a5d8ff)[-學校-]
+</tw-passagedata><tw-passagedata pid="15" name="上學1" tags="" position="601,1773" size="100,100">幾天後......
+
+(text-colour:#a5d8ff)[-學校-]
 羅寒岳想找到關於父親的資訊，但一時想不到方法，於是決定先回到學校上課。
 久違地踏入校門，羅寒岳矗立在警衛室前，仰頭看天空。
 「羅寒岳！你怎麼在這裡發呆？」(link-repeat:&#39;張祐寧&#39;)[(open-url:&#39;http://139.162.74.22/mediawiki/index.php/%E5%BC%B5%E7%A5%90%E5%AF%A7&#39;)]朝羅寒岳走去，一臉疑惑地問。
@@ -201,11 +203,8 @@
 「好，那岳岳就麻煩您了！」羅茵走出諮商室。
 「寒岳最近有什麼煩惱的事嗎？」端木律轉向羅寒岳說道。
 「嗯…」接著羅寒岳開始敘述他覺得爸爸拋棄他、在學校莫名其妙的事，以及在意識空間和人格的對話。
-「你是說你在意識空間裡面見到了另外三個人格？」端木律確認道。
-「對…」
-「寒岳，聽你的敘述，你這樣的情況很像人格分裂，雖然目前你知道的哪幾個人格都沒有攻擊性，但還是有可能有其他你不知道的人格存在，如果剛好是有攻擊性的人格的話，你會很危險，所以我建議你之後定期回診，我們再追蹤你其他人格的情況，你可以回去考慮一下，我待會也會跟你姑姑說你大致的狀況」端木律給羅寒岳忠告。
 
-[[繼續-&gt;治療與否5(姑姑)]]</tw-passagedata><tw-passagedata pid="24" name="治療與否5(姑姑)" tags="Branch" position="495,3242" size="100,100">(text-colour:#a5d8ff)[-回家後-]
+[[繼續-&gt;治療與否4_1(姑姑)]]</tw-passagedata><tw-passagedata pid="24" name="治療與否5(姑姑)" tags="Branch" position="495,3242" size="100,100">(text-colour:#a5d8ff)[-回家後-]
 羅茵想著剛剛和諮商師的對話，擔心寒岳的狀況會更加嚴重，便主動和他說道
 「岳岳，姑姑剛剛聽諮商師說你的狀況，他很建議你之後繼續回診，姑姑很擔心你，也希望你繼續治療，但姑姑想尊重你的意願，不想逼你，你自己好好考慮看看」羅茵雖然擔心但還是把決定權交給羅寒岳。
 「嗯，謝謝姑姑，在回來的路上我就已經想好了
@@ -295,7 +294,8 @@
 [[繼續-&gt;接受治療8]]</tw-passagedata><tw-passagedata pid="35" name="接受治療8" tags="" position="746,4266" size="100,100">看著眾人沉默，羅寒岳接著說：「我們接下來需要齊心協力找出傷害岳岳的人格，你們知道有什麼辦法可以找到他嗎？意識空間除了你們和他還有其他人格嗎？」
 「岳岳前幾天有看到拔拔」，岳岳突然出聲。
 三人同時望向岳岳，不明所以。
-「岳岳在來這裡的第一天看到的」，岳岳說完後抿著嘴唇低下頭，不知道自己說錯了什麼話，怎麼大家看起來好嚴肅。
+
+「岳岳看到他來這裡晃一下就又走了，」岳岳說完後抿著嘴唇低下頭，不知道自己說錯了什麼話，怎麼大家看起來好嚴肅，「應該是回他房間了吧？岳岳不知道...」
 「你說的爸爸是誰呢」，羅寒岳輕聲問，因為岳岳看起來有點害怕。
 「岳岳的拔拔啊，羅辰旭」岳岳盯著羅寒岳道。
 「轟」聽到熟悉的名字，羅寒岳的心情五味雜陳，(text-colour:#868e96)[『不知道這個人格是不是也長得跟父親一樣呢。』]
@@ -314,23 +314,13 @@
 岳岳那天並沒有看到那個人的長相，但因為焱和永儒拖著他到交誼聽，所以有印象。
 「解釋起來需要一點時間，能請你跟我們一起到交易廳聊一聊嗎？」永儒不疾不徐接著說道，一如往常地冷靜。
 羅辰旭點了點頭。一行人回到交誼廳。
-自見到羅辰旭後，岳岳就躲在羅寒岳身後不出聲，羅寒岳猜想他應該很畏懼羅辰旭，(text-colour:#868e96)[「跟我一樣呢。」]
-永儒向羅辰旭解釋為什麼會找他、這裡並非現實世界而是意識空間、意識空間運作的原則以及羅寒岳去看諮商師而得知體內可能其他人格存在，因此打算接受治療。
-一連串的資訊持續對羅辰旭轟炸，他怎麼也沒想到，自己並非一個完整獨立的個體，他很無法接受也不願接受，但表面上，他沒有任何的情緒波動。
-同時，羅辰旭暗自下定了決心。
 
-[[繼續-&gt;接受治療11]]</tw-passagedata><tw-passagedata pid="38" name="接受治療11" tags="" position="745,4642" size="100,100">「你那天為什麼要攻擊岳岳？」焱無法理解為什麼有人忍心攻擊一個5歲的孩子。
+[[繼續-&gt;接受治療10_1]]</tw-passagedata><tw-passagedata pid="38" name="接受治療11" tags="" position="899,4650" size="100,100">「你那天為什麼要攻擊岳岳？」焱無法理解為什麼有人忍心攻擊一個5歲的孩子。
 「出於防備，因為不知道為什麼自己家裡會出現莫名其妙的人，所以只好先把他打暈」羅辰旭道。
+
 羅辰旭看著眼前的人格們，感到相當厭煩，但擅長掩藏情緒的他在別人看來就只是面無表情，且為了讓大夥相信他，他充滿誠意地向岳岳道歉。
-「岳岳，對不起，叔叔那天不是有意的，以後不會了，可以原諒叔叔嗎？」羅辰旭的眼神看起來十分真摯。
-「嗯，岳岳原諒叔叔」畢竟一個孩子也沒那麼多的心眼，岳岳起身走向羅辰旭給他一個抱抱以示和好。
-「謝謝岳岳」羅辰旭回抱岳岳。
-「那我知道這個世界的運作原則了，還有其他我應該注意的地方嗎？沒有的話我就回房間了」羅辰旭想早些離開這個地方。
-「不能再攻擊別的人格，否則小心我對你不客氣」焱面露兇狠道。
-「嗯」羅辰旭轉身回房。
 
-
-[[繼續-&gt;發覺]]</tw-passagedata><tw-passagedata pid="39" name="發覺" tags="" position="595,4691" size="100,100">一旁的羅寒岳聽著他們和羅辰旭的對話，陷入自己的沉思當中，因為這個人格和父親實在太像，讓他想起了零碎的記憶片段。
+[[繼續-&gt;接受治療11_1]]</tw-passagedata><tw-passagedata pid="39" name="發覺" tags="" position="595,4691" size="100,100">一旁的羅寒岳聽著他們和羅辰旭的對話，陷入自己的沉思當中，因為這個人格和父親實在太像，讓他想起了零碎的記憶片段。
 
 (text-colour:(hsl:160,0.8462,0.8725,0.75))[「羅寒岳！要我說幾次，不准進來我的書房…」]
 「父親的表情格外冷酷呢。」
@@ -366,11 +356,8 @@
 「好，那岳岳就麻煩您了！」周思齊走出諮商室。
 「寒岳最近有什麼煩惱的事嗎？」端木律轉向羅寒岳說道。
 「嗯…」接著羅寒岳開始敘述他覺得爸爸拋棄他、在學校莫名其妙的事，以及在意識空間和人格的對話。
-「你是說你在意識空間裡面見到了另外三個人格？」端木律確認道。
-「對…」
-「寒岳，聽你的敘述，你這樣的情況很像人格分裂，雖然目前你知道的哪幾個人格都沒有攻擊性，但還是有可能有其他你不知道的人格存在，如果剛好是有攻擊性的人格的話，你會很危險，所以我建議你之後定期回診，我們再追蹤你其他人格的情況，你可以回去考慮一下，我待會也會跟你舅舅說你大致的狀況」端木律給羅寒岳忠告。
 
-[[繼續-&gt;治療與否5(舅舅)]]</tw-passagedata><tw-passagedata pid="43" name="治療與否5(舅舅)" tags="Branch" position="695,3241" size="100,100">(text-colour:#a5d8ff)[-回家後-]
+[[繼續-&gt;治療與否4_1(舅舅)]]</tw-passagedata><tw-passagedata pid="43" name="治療與否5(舅舅)" tags="Branch" position="695,3241" size="100,100">(text-colour:#a5d8ff)[-回家後-]
 周思齊想著剛剛和諮商師的對話，擔心寒岳的狀況會更加嚴重，便主動和他說道
 「岳岳，舅舅剛剛聽諮商師說你的狀況，他很建議你之後繼續回診，我很擔心你，也希望你繼續治療，但我不想逼你，你好好考慮看看」周思齊雖然擔心但還是把決定權交給羅寒岳。
 「嗯，謝謝舅舅，在回來的路上我就已經想好了
@@ -443,12 +430,8 @@
 「解釋起來需要一點時間，能請你跟我們一起到交誼廳聊一聊嗎？」永儒不疾不徐接著說道。
 羅辰旭點了點頭。一行人回到交誼廳。
 自見到羅辰旭後，岳岳就躲在羅寒岳身後不出聲，羅寒岳猜想他應該很畏懼羅辰旭，(text-colour:#868e96)[『跟我一樣呢。』]
-永儒向羅辰旭解釋為什麼會找他、這裡並非現實世界而是意識空間、意識空間運作的原則以及羅寒岳去看諮商師而得知體內可能其他人格存在，因此打算接受治療。
 
-一連串的資訊持續對羅辰旭轟炸，他怎麼也沒想到，自己並非一個完整獨立的個體，他很無法接受也不願接受，但表面上，他沒有任何的情緒波動。
-同時，羅辰旭暗自下定了決心。
-
-[[繼續-&gt;發覺]]</tw-passagedata><tw-passagedata pid="52" name="感謝遊玩" tags="THANKS" position="1200,13069" size="100,100">
+[[繼續-&gt;接受治療5_1]]</tw-passagedata><tw-passagedata pid="52" name="感謝遊玩" tags="THANKS" position="1200,13069" size="100,100">
 #(text-colour:#ffec99)[(text-style:&quot;bold&quot;,&quot;buoy&quot;,&quot;smear&quot;)[感謝您的遊玩ヾ(*´∀ ˋ*)ﾉ]]
 ---
 作者:林宣瑩，林嘉紜
@@ -774,10 +757,10 @@
 「你找那個沒用的東西做什麼？看看你是何時又如何害死你媽的嗎？」
 …
 「...要是能重來，我一定不生下你，是你害死你媽…」
-視線被淚水浸染，早已看不清地板的模樣，羅寒岳閉上雙眼，畫面隨即變暗。]
+視線被淚水浸染，早已看不清地板的模樣，回憶裡的羅寒岳閉上雙眼，畫面隨即變暗。]
 
-[[繼續-&gt;現場12]]</tw-passagedata><tw-passagedata pid="92" name="現場12" tags="" position="520,9167" size="100,100">(dialog: &quot;(text-colour:(hsl:160,0.8462,0.8725,0.75))[「這樣你就沒辦法傷害他了。」
-雖然是自己發出的聲音，他卻感到十分陌生。]&quot;,&quot;繼續&quot;)
+[[繼續-&gt;現場12]]</tw-passagedata><tw-passagedata pid="92" name="現場12" tags="" position="520,9167" size="100,100">(dialog: &quot;(text-colour:(hsl:160,0.8462,0.8725,0.75))[「這樣你就沒辦法傷害他了。」]
+雖然是自己發出的聲音，他卻感到十分陌生。&quot;,&quot;繼續&quot;)
 「滴、答」珍珠大的淚從羅寒岳的臉頰滑落，滴到證明書上。
 他用袖子胡亂地擦乾淚水，用力地吸吸鼻子，讓心情平復一點。
 
@@ -795,7 +778,7 @@
 『......』
 『看來還是問一下$relative好了。』]
 
-(if:$relative is &quot;姑姑&quot;)[[[繼續-&gt;親戚_姑姑1]]](else-if:$relative is &quot;舅舅&quot;)[[[繼續-&gt;親戚_舅舅1]]]</tw-passagedata><tw-passagedata pid="94" name="計畫1" tags="" position="896,9166" size="100,100">(text-colour:#a5d8ff)[-意識空間書房-]
+(if:$relative is &quot;姑姑&quot;)[[[繼續-&gt;親戚_姑姑1]]](else-if:$relative is &quot;舅舅&quot;)[[[繼續-&gt;親戚_舅舅1]]]</tw-passagedata><tw-passagedata pid="94" name="計畫1" tags="" position="896,9166" size="100,100">(text-colour:#a5d8ff)[-意識空間圖書室-]
 在羅寒岳四處調查時，羅辰旭則是到處尋找更多關於人格的知識。
 臨床資料、論文、案例，甚或是影視作品，所有能找到的相關紀錄都被羅辰旭網羅。
 //「分裂出的人格之間知道彼此的存在，稱為&quot;並存意識&quot;」//一篇文章如此記錄。
@@ -876,7 +859,7 @@
 回到自己房間，羅辰旭仔細思考先前發現的那本筆記。
 (text-colour:#868e96)[『所以人格是有辦法消失的嗎？』]他坐到書桌前，將那本筆記放在桌上，並拿出紙筆，(text-colour:#868e96)[『要是那本書說的是真的，那麼...』]
 
-「我還有機會能擁有身體。」
+「我還有機會能擁有完整的身體。」
 
 他開始在紙上振筆疾書。
 
@@ -951,13 +934,10 @@
 「沙小？怎麼可能？」被突然拜訪的焱，聽完描述後顯然不相信羅寒岳說的話。
 「對啊，羅叔叔怎麼可能是壞蛋。」岳岳小聲地附和。
 「我也很不想相信，但這是真的。」羅寒岳抹了把臉，思考要怎麼解釋清楚。
-「聽著，無意冒犯，恁爸知道你不喜歡他，但隨意揣測可不好。」
+「聽著，無意冒犯，恁爸知道你不喜歡他，但隨意揣測可不好。」焱皺起了眉頭。
 「不是的，我是真的聽到他們的對話！」
-羅寒岳背對他們，深吸一口氣，隨後轉身向他們伸出雙手，「如果你們不相信的話，可以牽住我的手。」
-雖然不清楚羅寒岳想做什麼，但他堅定的眼神增添了一股說服力，焱和岳岳面面相覷，半信半疑的牽起了羅寒岳的手。
-(text-colour:#868e96)[『拜託，一定要成功啊！』]羅寒岳暗自祈禱著。
 
-[[繼續-&gt;得知7]]</tw-passagedata><tw-passagedata pid="114" name="得知7" tags="" position="821,10817" size="100,100">羅寒岳握緊他們的手，閉起眼睛，他的頭髮像被風吹起般飄揚，淡藍色的光點從髮絲間冒出，一點一點的匯聚，像是水流般自肩膀傾瀉而下，順著手臂流到岳岳和焱的指尖內，而那些記憶也隨著光點流進他們的腦海內。
+[[繼續-&gt;得知6_1]]</tw-passagedata><tw-passagedata pid="114" name="得知7" tags="" position="821,10817" size="100,100">羅寒岳握緊他們的手，閉起眼睛，他的頭髮像被風吹起般飄揚，淡藍色的光點從髮絲間冒出，一點一點的匯聚，像是水流般自肩膀傾瀉而下，順著手臂流到岳岳和焱的指尖內，而那些記憶也隨著光點流進他們的腦海內。
 
 「！！！」結束後，焱和岳岳驚訝地說不出話來。
 
@@ -1012,7 +992,7 @@
 [[繼續-&gt;未知3]]</tw-passagedata><tw-passagedata pid="119" name="未知3" tags="" position="971,10216" size="100,100">##//&quot;Save Steven Grant&quot;//
 偌大的字映入羅寒岳的眼簾，他吞吞口水，繼續翻開下一頁。
 
-[[繼續-&gt;未知4]]</tw-passagedata><tw-passagedata pid="120" name="未知4" tags="" position="971,10366" size="100,100">//我真的快受不了Harrow這樣欺負Steven了！為了避免哪天Seven被Harrow逼上絕路，我必須事先擬好計畫才行，謹以此作為紀錄。
+[[繼續-&gt;未知4]]</tw-passagedata><tw-passagedata pid="120" name="未知4" tags="" position="971,10366" size="100,100">//我真的快受不了Harrow這樣欺負Steven了！為了避免哪天Steven被Harrow逼上絕路，我必須事先擬好計畫才行，謹以此作為紀錄。
 (align:&quot;==&gt;&quot;)+(box:&quot;=======XXXXXXXXXX===&quot;)[Marc]//......
 ...
 後續幾頁詳述了&quot;Marc&quot;所謂的計畫，包含如何籌措金錢、如何逃離Harrow，或是之後可能遇到的狀況和解決辦法...等等。
@@ -1139,7 +1119,7 @@
 「......」似乎是冷靜下來，意識空間不再搖晃。
 
 [[繼續-&gt;生存10_1]]</tw-passagedata><tw-passagedata pid="136" name="生存11" tags="" position="671,12617" size="100,100">「好痛！」衝突結束後，羅寒岳正在擦藥，剛剛忽視的高溫仍舊燙傷了他。
-「呼呼～痛痛飛走囉！」岳岳仔細地幫羅寒岳上藥，「大葛格超帥的！像是主角一樣，英勇的解決事件。」
+「呼呼～痛痛飛走囉！」岳岳仔細地幫羅寒岳上藥，「大葛格超帥的！像是卡通主角一樣，英勇的解決事件。」
 「要是稍有閃失，可是會把命賠上的。」永儒則是將混亂的交誼廳復原後，坐在一側的沙發上，「我不建議這麼賭命。」
 「哈哈，這樣才熱血啊！反正人還活著嘛！有什麼關係。」焱從廚房端出了一道道點心與飲料，放在桌上。
 「...」羅辰旭坐在一旁，不理解為何自己還在這裡，也不知道之後會發生什麼事。
@@ -1690,7 +1670,40 @@ Tony Stark 的全息投影離開座位，注視著他的女兒。
 羅寒岳點了點頭便埋頭吃飯，(text-colour:#868e96)[『爸爸去哪裡了？他是要拋棄我了嗎？要不然怎麼會把我帶到舅舅這？』]
 腦海裡的思緒極度混亂，回房間的羅寒岳思來想去，決定這幾天都不去上學，讓自己休息一會兒。
 
-[[繼續-&gt;上學1]]</tw-passagedata></tw-storydata>
+[[繼續-&gt;上學1]]</tw-passagedata><tw-passagedata pid="200" name="治療與否4_1(舅舅)" tags="" position="852,3125" size="100,100">「你是說你在意識空間裡面見到了另外三個人格？」端木律確認道。
+「對…」
+「寒岳，聽你的敘述，你這樣的情況很像人格分裂，雖然目前你知道的哪幾個人格都沒有攻擊性，但還是有可能有其他你不知道的人格存在，如果剛好是有攻擊性的人格的話，你會很危險，所以我建議你之後定期回診，我們再追蹤你其他人格的情況，你可以回去考慮一下，我待會也會跟你舅舅說你大致的狀況」端木律給羅寒岳忠告。
+
+[[繼續-&gt;治療與否5(舅舅)]]</tw-passagedata><tw-passagedata pid="201" name="治療與否4_1(姑姑)" tags="" position="350,3126" size="100,100">「你是說你在意識空間裡面見到了另外三個人格？」端木律確認道。
+「對…」
+「寒岳，聽你的敘述，你這樣的情況很像人格分裂，雖然目前你知道的哪幾個人格都沒有攻擊性，但還是有可能有其他你不知道的人格存在，如果剛好是有攻擊性的人格的話，你會很危險，所以我建議你之後定期回診，我們再追蹤你其他人格的情況，你可以回去考慮一下，我待會也會跟你姑姑說你大致的狀況」端木律給羅寒岳忠告。
+
+[[繼續-&gt;治療與否5(姑姑)]]</tw-passagedata><tw-passagedata pid="202" name="接受治療10_1" tags="" position="900,4518" size="100,100">自見到羅辰旭後，岳岳就躲在羅寒岳身後不出聲，羅寒岳猜想他應該很畏懼羅辰旭，(text-colour:#868e96)[「跟我一樣呢。」]
+永儒向羅辰旭解釋為什麼會找他、這裡並非現實世界而是意識空間、意識空間運作的原則以及羅寒岳去看諮商師而得知體內可能其他人格存在，因此打算接受治療。
+一連串的資訊持續對羅辰旭轟炸，他怎麼也沒想到，自己並非一個完整獨立的個體，他很無法接受也不願接受，但表面上，他沒有任何的情緒波動。
+同時，羅辰旭暗自下定了決心。
+
+[[繼續-&gt;接受治療11]]</tw-passagedata><tw-passagedata pid="203" name="接受治療11_1" tags="" position="751,4649" size="100,100">「岳岳，對不起，叔叔那天不是有意的，以後不會了，可以原諒叔叔嗎？」羅辰旭的眼神看起來十分真摯。
+
+「嗯，岳岳原諒叔叔」畢竟一個孩子也沒那麼多的心眼，岳岳起身走向羅辰旭給他一個抱抱以示和好。
+「謝謝岳岳」羅辰旭回抱岳岳。
+
+「那我知道這個世界的運作原則了，還有其他我應該注意的地方嗎？沒有的話我就回房間了」羅辰旭想早些離開這個地方。
+「不能再攻擊別的人格，否則小心我對你不客氣」焱面露兇狠道。
+「嗯」羅辰旭轉身回房。
+
+[[繼續-&gt;發覺]]</tw-passagedata><tw-passagedata pid="204" name="得知6_1" tags="" position="699,10667" size="100,100">面前的兩人始終露出懷疑的面容，羅寒岳決定背對他們，深吸一口氣，隨後轉身向他們伸出雙手，「如果你們不相信的話，可以牽住我的手。」
+
+雖然不清楚羅寒岳想做什麼，但他堅定的眼神增添了一股說服力，焱和岳岳面面相覷，半信半疑的牽起了羅寒岳的手。
+
+(text-colour:#868e96)[『拜託，一定要成功啊！』]羅寒岳暗自祈禱著。
+
+[[繼續-&gt;得知7]]</tw-passagedata><tw-passagedata pid="205" name="接受治療5_1" tags="" position="494,4041" size="100,100">永儒向羅辰旭解釋為什麼會找他、這裡並非現實世界而是意識空間、意識空間運作的原則以及羅寒岳去看諮商師而得知體內可能其他人格存在，因此打算接受治療。
+
+一連串的資訊持續對羅辰旭轟炸，他怎麼也沒想到，自己並非一個完整獨立的個體，他很無法接受也不願接受，但表面上，他沒有任何的情緒波動。
+同時，羅辰旭暗自下定了決心。
+
+[[繼續-&gt;發覺]]</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,a=!1,i=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){a=!0,i=e}finally{try{!r&&s.return&&s.return()}finally{if(a)throw i}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
