--- a/story.html
+++ b/story.html
@@ -97,7 +97,7 @@
 |==|</tw-passagedata><tw-passagedata pid="8" name="姑姑1" tags="" position="500,1214" size="100,100">在羅寒岳的記憶裡，姑姑並不常和父親往來，看起來感情不是很好，但每次見到姑姑時，姑姑都會準備禮物給他，也會帶他去吃美食，因此即使相處時間短，羅寒岳還是喜歡姑姑的。
 「那她什麼時候會來？」羅寒岳有些期待，但同時意識到自己犯下的錯可能丟了姑姑對自己的疼愛，心情又沉到谷底。
 「應該快到了，她剛剛在電話裡說…」警察的話還沒說完，就看到一個女人踩著高跟鞋踏進警局。
-(link-repeat:&#39;羅茵&#39;)[(open-url:&#39;http://139.162.74.22/mediawiki/index.php/%E7%BE%85%E8%8C%B5)&#39;)]在電話裡聽說了整件事的始末，一掛掉電話就匆忙出門。
+(link-repeat:&#39;羅茵&#39;)[(open-url:&#39;http://139.162.74.22/mediawiki/index.php/%E7%BE%85%E8%8C%B5&#39;)]在電話裡聽說了整件事的始末，一掛掉電話就匆忙出門。
 「岳岳！」羅茵焦急地跑到羅寒岳面前，滿臉擔心地喚他的名字。
 「姑姑…」還沒來得及回神，羅寒岳就被羅茵抱住，羅茵輕輕地拍著他的背，彷彿在說這不是你的錯，羅寒岳忍不住流下淚。
 「沒事了，姑姑在這呢，我們等等就回家」羅茵看著孩子流淚，很是心疼。
@@ -2491,7 +2491,7 @@ Tony Stark 的全息投影離開座位，注視著他的女兒。
 [[繼續-&gt;發覺]]
 =|=
 (text-colour:#ffe066)[[[結局成就-&gt;路線]]]
-|==|</tw-passagedata><tw-passagedata pid="206" name="路線" tags="" position="299,12203.5" size="100,100">(if:$name is &quot;nobody&quot;)[(set:$name to (prompt:&quot;你的名字是: &quot;, &quot;mob&quot;))
+|==|</tw-passagedata><tw-passagedata pid="206" name="路線" tags="" position="299,12203" size="100,100">(if:$name is &quot;nobody&quot;)[(set:$name to (prompt:&quot;你的名字是: &quot;, &quot;mob&quot;))
 (if:$name is &quot;yakko&quot;)[(dialog:&quot;歡迎，神様&quot;, &quot;繼續&quot;)](if:$name is &quot;羅寒岳&quot;)[(dialog:&quot;ㄟ？呃，好吧。&quot;, &quot;繼續&quot;)](if:$name is &quot;羅辰旭&quot;)[(dialog:&quot;...&quot;, &quot;繼續&quot;)](if:$name is &quot;永儒&quot;)[(dialog:&quot;...你高興就好。&quot;, &quot;繼續&quot;)](if:$name is &quot;焱&quot;)[(dialog:&quot;哈哈哈！恁爸尬意你這小子。&quot;, &quot;繼續&quot;)](if:$name is &quot;岳岳&quot;)[(dialog:&quot;哇！跟岳岳一樣耶！&quot;, &quot;繼續&quot;)](if:$name is &quot;煙嵐&quot;)[(dialog:&quot;你是從哪知道這名字的？&quot;, &quot;繼續&quot;)]
 ]
 (text-colour:#ffe066)[###結局成就，期待$name完成(｡◕∀◕｡)]
