--- a/story.html
+++ b/story.html
@@ -184,7 +184,7 @@
 =|=
 (text-colour:#ffe066)[[[結局成就-&gt;路線]]]
 |==|</tw-passagedata><tw-passagedata pid="16" name="上學2" tags="" position="601,1891" size="100,100">進教室後，就見到數學小老師正在講台上收昨天公布的作業，而且數學老師不接受任何理由的補交。
-『慘了』羅寒岳心想，立刻轉身問張祐寧：「昨天要寫的作業範圍是哪？」
+(text-colour:#868e96)[『慘了』]羅寒岳心想，立刻轉身問張祐寧：「昨天要寫的作業範圍是哪？」
 「數習的第二章全部」張祐寧回道。
 當羅寒岳好不容易找到數習，正要開始寫時卻發現已經完成，但字卻不像他寫的。
 
@@ -435,7 +435,7 @@
 |==|</tw-passagedata><tw-passagedata pid="37" name="接受治療10" tags="" position="747,4517" size="100,100">羅寒岳被眼前的景象震驚了，眼前的人和父親不僅長相如出一轍，聲音也極為相似。
 「你就是那天攻擊岳岳的混蛋！」焱記憶猶新。
 岳岳那天並沒有看到那個人的長相，但因為焱和永儒拖著他到交誼聽，所以有印象。
-「解釋起來需要一點時間，能請你跟我們一起到交易廳聊一聊嗎？」永儒不疾不徐接著說道，一如往常地冷靜。
+「解釋起來需要一點時間，能請你跟我們一起到交誼廳聊一聊嗎？」永儒不疾不徐接著說道，一如往常地冷靜。
 羅辰旭點了點頭。一行人回到交誼廳。
 
 =|||||=
@@ -627,7 +627,7 @@
 「冰淇淋～冰淇淋～ ♪」岳岳高興地端著一碗巧克力冰淇淋，喜孜孜地吃著。
 (text-colour:#868e96)[『除了剛剛的回憶之外，無論怎麼努力回想都想不起更多了。』]羅寒岳挖了一口香草冰淇淋放入口中，(text-colour:#868e96)[『也許那時候就有人格代替我出現了？』]
 
-「話說，岳岳。你還記得，呃，你們剛出現的時候的事情嗎？」
+「話說，岳岳。你還記得，呃，你們代替我出現的時候的事情嗎？」
 「唔呣？」雖然含糊不清，但岳岳清楚的表示出疑惑。
 
 =|||||=
@@ -739,7 +739,8 @@
 [[繼續-&gt;調查-永儒8]]
 =|=
 (text-colour:#ffe066)[[[結局成就-&gt;路線]]]
-|==|</tw-passagedata><tw-passagedata pid="62" name="調查-永儒8" tags="" position="495,6165" size="100,100">「嘛～畢竟當時是我在控制身體的嘛！」永儒閉上眼，彷彿在回憶當時的場景。「那您還記得當時發生的事嗎？」
+|==|</tw-passagedata><tw-passagedata pid="62" name="調查-永儒8" tags="" position="495,6165" size="100,100">「嘛～畢竟當時是我在控制身體的嘛！」永儒閉上眼，彷彿在回憶當時的場景。
+「那您還記得當時發生的事嗎？」
 「我還沒有如此健忘，大可放心。」
 「那——」
 「ㄟ～先別急。」永儒打斷羅寒岳的話，像是在盤算著什麼一樣直視對方，「天下沒有白吃的午餐。想必這道理你應該也懂吧？」
@@ -1890,7 +1891,7 @@ Tony Stark 的全息投影離開座位，注視著他的女兒。
 [[重新開始-&gt;開頭0]]
 [[結束遊戲-&gt;感謝遊玩]]
 (set:$ending4 to true)
-&lt;iframe width=&quot;0&quot; height=&quot;0&quot; src=&quot;https://www.youtube.com/embed/ijk6mJW4w4c?controls=0&amp;autoplay=true&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;
+&lt;iframe width=&quot;0%&quot; height=&quot;0&quot; scrolling=&quot;no&quot; frameborder=&quot;no&quot; allow=&quot;autoplay&quot; src=&quot;https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1142111557&amp;color=%23ff5500&amp;auto_play=true&amp;hide_related=false&amp;visual=true&quot;&gt;&lt;/iframe&gt;
 ]</tw-passagedata><tw-passagedata pid="154" name="信封3" tags="BONUS" position="970,11867" size="100,100">(text-colour:#a5d8ff)[-現實世界羅寒岳房間-]
 幾天後，頂著羅寒岳的外表，羅辰旭整理著他的背包。
 「這是什麼？信？」在背包深處，他翻到了一封被蠟封起來的信。
@@ -1919,7 +1920,7 @@ Tony Stark 的全息投影離開座位，注視著他的女兒。
 [[重新開始-&gt;開頭0]]
 [[結束遊戲-&gt;感謝遊玩]]
 
-&lt;iframe width=&quot;0&quot; height=&quot;0&quot; src=&quot;https://www.youtube.com/embed/ijk6mJW4w4c?controls=0&amp;autoplay=true&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;</tw-passagedata><tw-passagedata pid="156" name="結局2" tags="END" position="671,13067" size="100,100">「幹嘛笑的像個白癡一樣，很噁心耶。」
+&lt;iframe width=&quot;0%&quot; height=&quot;0&quot; scrolling=&quot;no&quot; frameborder=&quot;no&quot; allow=&quot;autoplay&quot; src=&quot;https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1142111557&amp;color=%23ff5500&amp;auto_play=true&amp;hide_related=false&amp;visual=true&quot;&gt;&lt;/iframe&gt;</tw-passagedata><tw-passagedata pid="156" name="結局2" tags="END" position="671,13067" size="100,100">「幹嘛笑的像個白癡一樣，很噁心耶。」
 「嘿嘿嘿，謝謝你們。」不理會焱的嫌惡，羅寒岳露出了更傻氣的笑容。
 「耖！你腦袋撞到喔？」焱別過臉。
 「焱，在公眾場合請注意措辭。坦然一點吧。」永儒搧了扇子，對羅寒岳笑了一下，「不必客氣，我只是做了對我最好的決定。」
@@ -2450,7 +2451,7 @@ Tony Stark 的全息投影離開座位，注視著他的女兒。
 [[繼續-&gt;治療與否5(姑姑)]]
 =|=
 (text-colour:#ffe066)[[[結局成就-&gt;路線]]]
-|==|</tw-passagedata><tw-passagedata pid="202" name="接受治療10_1" tags="" position="900,4518" size="100,100">自見到羅辰旭後，岳岳就躲在羅寒岳身後不出聲，羅寒岳猜想他應該很畏懼羅辰旭，(text-colour:#868e96)[「跟我一樣呢。」]
+|==|</tw-passagedata><tw-passagedata pid="202" name="接受治療10_1" tags="" position="900,4518" size="100,100">自見到羅辰旭後，岳岳就躲在羅寒岳身後不出聲，羅寒岳猜想他應該很畏懼羅辰旭，(text-colour:#868e96)[『跟我一樣呢。』]
 永儒向羅辰旭解釋為什麼會找他、這裡並非現實世界而是意識空間、意識空間運作的原則以及羅寒岳去看諮商師而得知體內可能其他人格存在，因此打算接受治療。
 一連串的資訊持續對羅辰旭轟炸，他怎麼也沒想到，自己並非一個完整獨立的個體，他很無法接受也不願接受，但表面上，他沒有任何的情緒波動。
 同時，羅辰旭暗自下定了決心。
